append update, delete task endpoints and fix functionallity